--- a/stylesheet.css
+++ b/stylesheet.css
@@ -90,11 +90,9 @@ li{
     height: 270px;
 }
 .container {
-    width: 1170px;
-    padding-left: 15px;
-    padding-right: 15spx;
-    margin-left: auto;
-    margin-right: auto;
+    width: 100%;
+    padding: 0 15px;
+    margin: 0 auto;
 }
 .main {
     padding: 180px 0 110px 0;
