--- a/responsive.css
+++ b/responsive.css
@@ -3,4 +3,17 @@
     width: 50%;
     margin-bottom: 50px;
   }
+  footer {
+    text-align: center;
+  }
+  .btn {
+    width: 100%;
+  }
+  .facebook {
+    margin-bottom: 10px;
+  }
+  .top-wrapper {
+    text-align: left;
+    padding-top: 130px;
+  }
 }
