--- a/responsive.css
+++ b/responsive.css
@@ -16,4 +16,10 @@
     text-align: left;
     padding-top: 130px;
   }
+  .header-right {
+    display: none;
+  }
+  .menu-icon {
+    display: block;
+  }
 }
