--- a/responsive.css
+++ b/responsive.css
@@ -22,4 +22,12 @@
   .menu-icon {
     display: block;
   }
+  .top-wrapper h1 {
+    font-size: 24px;
+    line-height: 36px;
+  }
+  .top-wrapper p {
+    font-size: 14px;
+    line-height: 20px;
+  }
 }
