--- a/stylesheet.css
+++ b/stylesheet.css
@@ -85,6 +85,27 @@ li{
     font-size: 24px;
     margin-top: 30px;
 }
+.lesson-wrapper {
+  height: 580px;
+  padding-bottom: 80px;
+  padding-left: 5%;
+  padding-right: 5%;
+  background-color: #f7f7f7;
+  text-align: center;
+}
+.lesson {
+  float: left;
+  width: 25%;
+}
+.lesson-icon {
+  position: relative;
+}
+.lesson-icon p {
+  position: absolute;
+  top: 44%;
+  width: 100%;
+  color: white;
+}
 .footer {
     background-color: rgb(185, 241, 185);
     height: 270px;
